# brpc

other/design_pattern/decorator/: Decorator.cpp
other/design_pattern/factory_learn/: FactoryMethod.cpp  SimpleFactory.cpp  VirtualFactory.cpp
other/design_pattern/single_ton/: SingleTon.cpp
other/leetcode/bupt/: binary.cpp
y_example/: BUILD.bazel
y_example/multi_threaded_phone/: client.cpp  server.cpp
y_example/phone/: client.cpp  phone.proto  server.cpp
